Closed Bug 1484884 Opened 7 years ago Closed 7 years ago

Incorrect async adjustment of fixed elements when zooming

Categories

(Core :: Panning and Zooming, defect, P3)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- wontfix
firefox65 --- fixed
firefox66 --- fixed

People

(Reporter: u608768, Assigned: botond)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(2 files)

When async-zooming, the adjustment applied to fixed elements is incorrect. This is a result of bug 1465616, which was responsible for changing the viewport that fixed elements are attached to (both when reflowing and when compositing). This doesn't appear to be a problem when fixed elements are attached to the visual viewport (i.e., when the visual viewport is larger than the layout viewport), but I could be wrong.
Note that there are already tests for this in the tree (currently marked as expected-fail): they were added in the "Add failing fixed-position async-zoom reftests" patch in bug 1465616.
Priority: -- → P3
Whiteboard: [gfx-noted]
Kashav, I assume you're not working on this :)
Assignee: kshvmdn → nobody
Coordinate system issues are good problems to think through during a flight :) The issue here is that, unlike the visual viewport, the layout viewport does not change size (in terms of CSS coordinates) when zooming. Therefore, if we're trying to keep something fixed to the layout viewport, we don't want to be compensating for the zoom transform applies to the enclosing container layer.
Assignee: nobody → botond
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/276287cba1de Fix async zoom transform computation for layout viewport. r=kats
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Comment on attachment 9030113 [details] Bug 1484884 - Fix async zoom transform computation for layout viewport. r=kats [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1465616 User impact if declined: When pinch-zooming on mobile, position:fixed elements are incorrectly positioned during the zoom. At the completion of the zoom, they jump to their correct positions. Is this code covered by automated tests?: Yes Has the fix been verified in Nightly?: Yes Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): Targeted change that affects only the positioning of fixed elements during async zooming. String changes made/needed:
Attachment #9030113 - Flags: approval-mozilla-beta?
Comment on attachment 9030113 [details] Bug 1484884 - Fix async zoom transform computation for layout viewport. r=kats [Triage Comment] Fixes odd positioning of position:fixed elements during pinch zooming. Approved for 64.0b5.
Attachment #9030113 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: in-testsuite+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: