Bug 1484884 - Fix async zoom transform computation for layout viewport. r=kats, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D14020

--HG--
extra : source : 276287cba1de410595adb04c48fce0c0e22cef80