gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -3973,11 +3973,16 @@ AsyncTransform AsyncPanZoomController::GetCurrentAsyncViewportTransform(
     }
   }
 
-  CSSToParentLayerScale2D effectiveZoom = GetEffectiveZoom(aMode);
+  // Unlike the visual viewport, the layout viewport does not change size
+  // (in the sense of "number of CSS pixels of page content it covers")
+  // when zooming, so the async transform of the layout viewport does not
+  // have an async zoom component. (The translation still needs to be
+  // multiplied by the non-async zoom, to get it into the correct coordinates.)
+  CSSToParentLayerScale2D effectiveZoom = Metrics().LayersPixelsPerCSSPixel()
+      * LayerToParentLayerScale(1.0f);
   ParentLayerPoint translation =
       (currentViewportOffset - lastPaintViewport.TopLeft()) * effectiveZoom;
-  LayerToParentLayerScale compositedAsyncZoom =
-      (effectiveZoom / Metrics().LayersPixelsPerCSSPixel()).ToScaleFactor();
+  LayerToParentLayerScale compositedAsyncZoom;
 
   return AsyncTransform(compositedAsyncZoom, -translation);
 }
